--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="fejlec">
-        <h1>Magyarország vizei</h1>
+        <h1 class="font-marhey">Magyarország vizei</h1>
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-light">
         <a class="navbar-brand" href="index.html">SJB</a>
@@ -18,21 +18,20 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Velencei-tó <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+              <a class="nav-link" href="#velencei-to">Velencei-tó <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Hévízi-tó</a>
+              <a class="nav-link" href="#hevizi-to">Hévízi-tó</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">További vizeink</a>
+              <a class="nav-link" href="#tovabbi-vizeink">További vizeink</a>
             </li>
           </ul>
         </div>
       </nav>
       <!-- elso adag szoveg-->
     <div class="container">
-
 
         <p>A tengerpart nélküli Magyarország a Duna medence középső szakaszán helyezkedik el, területének (93.030 km2) egésze a Duna mednce részét képezi. A folyók az országba nyugati, északi és keleti irányból lépnek be, és déli irányba folynak tovább.</p>
         <p>A legjelentősebb folyónak, a Dunának a legnagyobb mellékfolyói a Tisza és a Dráva. A felszíni vizek 82%-át a Duna és a Dráva vezeti le, a Tisza 18%-ot tesz ki, bár az ország 50%-a a Tisza vízgyűjtőjéhez tartozik.</p>
@@ -41,10 +40,9 @@
         <p>Itt található Közép-Európának legnagyobb és legsekélyebb édesvízi tavai (Balaton, Velencei-tó, Fertő-tó/Neusiedlersee).</p>
         <p>A felszíni vizek általános jellemzőit az ország elhelyezkedése határozza meg, mivel 95%-uk a szomszédos országokból érkeznek: Horvátország, Ausztria, Szlovákia, Ukrajna és Románia. Magyarország a "lefolyó vizek" országa.</p>
 
-
         <div class="row">
           <div class="col-sm">
-            <h2>Velencei-tó</h2>
+            <h2 class="font-marhey" id="velencei-to">Velencei-tó</h2>
             <p>A Velencei-tó Magyarország harmadik legnagyobb természetes tava. Kedvező természeti és földrajzi adottságainak, valamint a mederszabályzásnak köszönhetően a Balatonhoz hasonlóan hazánk legkedveltebb üdülőhelyeinek egyike.</p>
             <p>Területe 26 km², a felület harmada nádassal borított. A napsütés hatására, valamint a sekély, átlagosan 1,5 m-es mélysége miatt Európa egyik legmelegebb tava: a víz hőmérséklete elérheti a 26-28 °C-ot is.</p>
             <p>A Velencei-tó ásványi anyagokban (nátrium és magnézium) gazdag, kiváló vize a kimerült szervezetet felfrissíti, regenerálja. A fürdésen kívül a reumatikus fájdalmak enyhítésére is alkalmas.</p>
@@ -61,13 +59,24 @@
             <img src="img/hevizito.jpg" class="img-border img-fluid">
           </div>
         <div class="col-sm">
-            <h2>Hévízi-tó</h2>
+            <h2 class="font-marhey" id="hevizi-to">Hévízi-tó</h2>
             <p>A Hévízi-gyógytó Természetvédelmi Terület legismertebb látványossága a Hévízi-tó vagy Hévízi-gyógytó. A tó 4,44 ha kiterjedésével és az őt körülvevő 50 ha területű véderdővel Európa legnagyobb gyógyhatású melegvizes tava. Az első tutajokra épített fürdőházat 1772-ben Festetics György, a keszthelyi Georgikon alapítója építtette.</p>
             <p>Ellentétben a többi melegvizes tóval, melyek általában vulkanikus eredetű helyeken, agyag- vagy sziklatalajban vannak, a Hévízi-tó tőzegmedrű forrástó, amelyet a 38 méter mély Hévízi-forrásbarlangból feltörő, másodpercenként 410 liter vízhozammal 38 °C-os víz táplál. A Keszthelyi-fennsík nyugati lejtője mentén, a Hévízi-völgyben található, Hévíz városa mellett.</p>
             <p>A tó páratlan természeti környezetét elsősorban a parkkal övezett gyógyvizű tó, a vízfelszín felett lebegő páraréteg, a tó felszínén úszó indiai vörös tündérrózsák (Castalia rubra longiflora) teszik különlegessé.</p>
-            
-        </div>
 
+        </div>
+        <!-- táblázat -->
+
+        
+        <!-- kepgrid-->
+        <div class="kepgrid" id="tovabbi-vizeink">
+            <div class="kep1"><img src="img/balaton.jpg" title="Balaton (Készítette: Posza Róbert - Pixabay)"class="img-fluid"></div>
+            <div class="kep2"><img src="img/dunakanyar.jpg" title="Dunakanyar (Készítette: Civertan - Wikimedia)"class="img-fluid"></div>
+            <div class="kep3"><img src="img/tiszato.jpg" title="Tisza-tó (Készítette: Frank Paul Silye - Wikimedia )"class="img-fluid"></div>
+            <div class="kep4"><img src="img/tisza.jpg" title="Tisza (Készítette: Takkk - Wikimedia )"class="img-fluid"></div>
+            <div class="kep5"><img src="img/zala.jpg" title="Zala folyó (Készítette: Civertan - Wikimedia )"class="img-fluid"></div>
+            <div class="kep6"><img src="img/raba.jpg" title="Rába folyó (Készítette: Civertan - Wikimedia )"class="img-fluid"></div>
+        </div>
 
 
     </div>
