--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
       </nav>
       <!-- elso adag szoveg-->
     <div class="container">
-
-        <p>A tengerpart nélküli Magyarország a Duna medence középső szakaszán helyezkedik el, területének (93.030 km2) egésze a Duna mednce részét képezi. A folyók az országba nyugati, északi és keleti irányból lépnek be, és déli irányba folynak tovább.</p>
-        <p>A legjelentősebb folyónak, a Dunának a legnagyobb mellékfolyói a Tisza és a Dráva. A felszíni vizek 82%-át a Duna és a Dráva vezeti le, a Tisza 18%-ot tesz ki, bár az ország 50%-a a Tisza vízgyűjtőjéhez tartozik.</p>
-        <p>A Duna Magyarországi szakasza 417 km, az északi-nyugati része magyar-szlovák határfolyó, majd onnan délre kanyarodik. A Tisza 595 km-en keresztül folyik az ország keleti részén.</p>
-        <p>Magyarország topográfiai jellemzőit tekintve a Kárpát-medence legmélyebb részén terül el, melynek nagy része alföld. Az ország nagy része a tengerszint feletti 200 m alatt (illetve a tengerszint feletti 78 és 200 m közötti magasságban) fekszik, csak 2 % található 400 m felett, a hegyek magassága pedig eléri a 1015 m-t az ország északi részén (Kékes).</p>
-        <p>Itt található Közép-Európának legnagyobb és legsekélyebb édesvízi tavai (Balaton, Velencei-tó, Fertő-tó/Neusiedlersee).</p>
-        <p>A felszíni vizek általános jellemzőit az ország elhelyezkedése határozza meg, mivel 95%-uk a szomszédos országokból érkeznek: Horvátország, Ausztria, Szlovákia, Ukrajna és Románia. Magyarország a "lefolyó vizek" országa.</p>
-
+        <div class="my-3">
+            <p>A tengerpart nélküli Magyarország a Duna medence középső szakaszán helyezkedik el, területének (93.030 km2) egésze a Duna mednce részét képezi. A folyók az országba nyugati, északi és keleti irányból lépnek be, és déli irányba folynak tovább.</p>
+            <p>A legjelentősebb folyónak, a Dunának a legnagyobb mellékfolyói a Tisza és a Dráva. A felszíni vizek 82%-át a Duna és a Dráva vezeti le, a Tisza 18%-ot tesz ki, bár az ország 50%-a a Tisza vízgyűjtőjéhez tartozik.</p>
+            <p>A Duna Magyarországi szakasza 417 km, az északi-nyugati része magyar-szlovák határfolyó, majd onnan délre kanyarodik. A Tisza 595 km-en keresztül folyik az ország keleti részén.</p>
+            <p>Magyarország topográfiai jellemzőit tekintve a Kárpát-medence legmélyebb részén terül el, melynek nagy része alföld. Az ország nagy része a tengerszint feletti 200 m alatt (illetve a tengerszint feletti 78 és 200 m közötti magasságban) fekszik, csak 2 % található 400 m felett, a hegyek magassága pedig eléri a 1015 m-t az ország északi részén (Kékes).</p>
+            <p>Itt található Közép-Európának legnagyobb és legsekélyebb édesvízi tavai (Balaton, Velencei-tó, Fertő-tó/Neusiedlersee).</p>
+            <p>A felszíni vizek általános jellemzőit az ország elhelyezkedése határozza meg, mivel 95%-uk a szomszédos országokból érkeznek: Horvátország, Ausztria, Szlovákia, Ukrajna és Románia. Magyarország a "lefolyó vizek" országa.</p>
+        </div>
         <div class="row my-5">
           <div class="col-sm">
             <h2 class="font-marhey" id="velencei-to">Velencei-tó</h2>
@@ -49,14 +49,14 @@
 
           </div>
           <div class="col-sm">
-            <img src="img/velenceito.jpg" class="img-border img-fluid">
+            <img src="img/velenceito.jpg" alt="Velencei-tó" title="Készítette: Susulyka - Wikimedia" class="img-border img-fluid">
           </div>
         </div>
 
 
         <div class="row my-5">
           <div class="col-sm">
-            <img src="img/hevizito.jpg" class="img-border img-fluid">
+            <img src="img/hevizito.jpg" alt="Hévízi-tó" title="Készítette: Civertan Grafikai Stúdió - Wikimedia" class="img-border img-fluid">
           </div>
         <div class="col-sm">
             <h2 class="font-marhey" id="hevizi-to">Hévízi-tó</h2>
